Hack to fix text clipping on the label

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Roboto', sans-serif; }
+
+mat-form-field label {
+  overflow: visible !important;
+}
